Create About Me section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
       </div>
     </nav>
   </header>
+  <div class="content-wrapper">
+  <section class="about">
+    <h2>About Me</h2>
+    <hr>
+    <div class="section-wrapper">
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
+        ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+        pariatur!
+      </div>
+      <div>
+        <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 
 </html>
