--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <div class="content-wrapper">
-  <section class="about">
+  <section>
     <h2>About Me</h2>
     <hr>
     <div class="section-wrapper">
