--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a class="navbar-link" href="">Home</a>
           </li>
           <li class="navbar-list-item">
-            <a class="navbar-link" href="">About</a>
+            <a class="navbar-link" href="#about">About</a>
           </li>
           <li class="navbar-list-item">
-            <a class="navbar-link" href="">Projects</a>
+            <a class="navbar-link" href="#projects">Projects</a>
           </li>
           <li class="navbar-list-item">
             <a class="navbar-link" href="">Contact</a>
@@ -37,7 +37,7 @@
   </header>
   <div class="content-wrapper">
   <section>
-    <h2>About Me</h2>
+    <h2 id="about">About Me</h2>
     <hr>
     <div class="section-wrapper">
       <div>
@@ -47,6 +47,25 @@
       </div>
       <div>
         <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
+      </div>
+    </div>
+  </section>
+  <section>
+    <h2 id="projects">Projects</h2>
+    <hr>
+    <div class="section-wrapper projects">
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
+        ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+        pariatur!
+      </div>
+      <div class="grid-wrapper">
+        <div class="box">
+          <p>Project description goes here...</p>
+        </div>
+        <div class="box">
+          <p>Project description goes here...</p>
+        </div>
       </div>
     </div>
   </section>
