Add social links

--- a/index.html
+++ b/index.html
@@ -29,47 +29,68 @@
             <a class="navbar-link" href="#projects">Projects</a>
           </li>
           <li class="navbar-list-item">
-            <a class="navbar-link" href="">Contact</a>
+            <a class="navbar-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
   </header>
   <div class="content-wrapper">
-  <section>
-    <h2 id="about">About Me</h2>
-    <hr>
-    <div class="section-wrapper">
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
-        ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-        pariatur!
-      </div>
-      <div>
-        <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
-      </div>
-    </div>
-  </section>
-  <section>
-    <h2 id="projects">Projects</h2>
-    <hr>
-    <div class="section-wrapper projects">
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
-        ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-        pariatur!
-      </div>
-      <div class="grid-wrapper">
-        <div class="box">
-          <p>Project description goes here...</p>
+    <section>
+      <h2 id="about">About Me</h2>
+      <hr>
+      <div class="section-wrapper">
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
+          ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+          pariatur!
         </div>
-        <div class="box">
-          <p>Project description goes here...</p>
+        <div>
+          <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
         </div>
       </div>
+    </section>
+    <section>
+      <h2 id="projects">Projects</h2>
+      <hr>
+      <div class="section-wrapper projects">
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
+          ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+          pariatur!
+        </div>
+        <div class="grid-wrapper">
+          <div class="box">
+            <p>Project description goes here...</p>
+          </div>
+          <div class="box">
+            <p>Project description goes here...</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div id="contact" class="social-links">
+      <ul>
+        <li>
+          <a href="https://github.com/Barenbik" aria-label="GitHub" target="_blank">
+            <img src="./img/GitHub-Mark-120px.png" alt="github_logo">
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/Barenbik" aria-label="Twitter" target="_blank">
+            <img src="./img/Twitter_Logo_Black.png" alt="twitter_logo">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/tony-sharples-b451a633/" aria-label="LinkedIn" target="_blank">
+            <img src="./img/LinkedIn_Logo.png" alt="linkedin_logo">
+          </a>
+        </li>
+      </ul>
     </div>
-  </section>
-</div>
+  </footer>
 </body>
 
 </html>
