Update social icons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -49,9 +49,11 @@
       <hr>
       <div class="section-wrapper">
         <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
-          ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-          pariatur!
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+            saepe,
+            ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+            pariatur!</p>
+
         </div>
         <div>
           <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
@@ -63,9 +65,11 @@
       <hr>
       <div class="section-wrapper projects">
         <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus saepe,
-          ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-          pariatur!
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+            saepe,
+            ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+            pariatur!</p>
+
         </div>
         <div class="grid-wrapper">
           <div class="box">
@@ -83,17 +87,17 @@
       <ul>
         <li>
           <a href="https://github.com/Barenbik" aria-label="GitHub" target="_blank">
-            <img src="./img/GitHub-Mark-120px.png" alt="github_logo">
+            <img src="./img/github_icon.svg" alt="" class="social-icon">
           </a>
         </li>
         <li>
           <a href="https://twitter.com/Barenbik" aria-label="Twitter" target="_blank">
-            <img src="./img/Twitter_Logo_Black.png" alt="twitter_logo">
+            <img src="./img/twitter_icon.svg" alt="" class="social-icon">
           </a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/tony-sharples-b451a633/" aria-label="LinkedIn" target="_blank">
-            <img src="./img/LinkedIn_Logo.png" alt="linkedin_logo">
+            <img src="./img/linkedin_icon.svg" alt="" class="social-icon">
           </a>
         </li>
       </ul>
