Add new sections and update styling

--- a/index.html
+++ b/index.html
@@ -44,39 +44,93 @@
     </nav>
   </header>
   <div class="content-wrapper">
-    <section>
-      <h2 id="about">About Me</h2>
-      <hr>
+    <section class="white-background">
       <div class="section-wrapper">
-        <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
-            saepe,
-            ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-            pariatur!</p>
-
-        </div>
-        <div>
-          <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
+        <h2 id="about">About Me</h2>
+        <hr>
+        <div class="section-content">
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+              saepe,
+              ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+              pariatur!</p>
+          </div>
+          <div>
+            <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
+          </div>
         </div>
       </div>
     </section>
-    <section>
-      <h2 id="projects">Projects</h2>
-      <hr>
-      <div class="section-wrapper projects">
+    <section class="blue-background">
+      <div class="section-wrapper">
+        <h2 id="about">Work History</h2>
+        <hr>
         <div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
             saepe,
             ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
             pariatur!</p>
-
         </div>
-        <div class="grid-wrapper">
-          <div class="box">
-            <p>Project description goes here...</p>
+      </div>
+    </section>
+    <section class="white-background">
+      <div class="section-wrapper">
+        <h2 id="projects">Previous Projects</h2>
+        <hr>
+        <div class="section-content projects">
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+              saepe,
+              ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+              pariatur!</p>
           </div>
-          <div class="box">
-            <p>Project description goes here...</p>
+          <div class="grid-wrapper">
+            <div class="box">
+              <h3>Project Heading</h2>
+                <p>Project description goes here...</p>
+            </div>
+            <div class="box">
+              <h3>Project Heading</h2>
+                <p>Project description goes here...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="blue-background">
+      <div class="section-wrapper">
+        <h2 id="projects">Active Projects</h2>
+        <hr>
+        <div class="section-content projects">
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+              saepe,
+              ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+              pariatur!</p>
+          </div>
+          <div class="grid-wrapper">
+            <div class="box">
+              <h3>Project Heading</h2>
+                <p>Project description goes here...</p>
+            </div>
+            <div class="box">
+              <h3>Project Heading</h2>
+                <p>Project description goes here...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="white-background">
+      <div class="section-wrapper">
+        <h2 id="projects">Contact Me</h2>
+        <hr>
+        <div class="section-content projects">
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
+              saepe,
+              ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
+              pariatur!</p>
           </div>
         </div>
       </div>
