Fix alignment issues

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-              pariatur!</p>
+              pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam in id ratione veritatis
+              nesciunt officiis? Laboriosam, consequatur tenetur nulla eum animi quisquam. Vitae corporis nemo culpa
+              obcaecati doloribus, qui nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur minima
+              nihil ut numquam, assumenda id, autem totam perferendis saepe corrupti cupiditate eligendi ex eveniet eum
+              vero fugiat officia atque sit.</p>
           </div>
           <div>
             <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
@@ -69,7 +73,11 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
             saepe,
             ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-            pariatur!</p>
+            pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam in id ratione veritatis
+            nesciunt officiis? Laboriosam, consequatur tenetur nulla eum animi quisquam. Vitae corporis nemo culpa
+            obcaecati doloribus, qui nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur minima
+            nihil ut numquam, assumenda id, autem totam perferendis saepe corrupti cupiditate eligendi ex eveniet eum
+            vero fugiat officia atque sit.</p>
         </div>
       </div>
     </section>
@@ -82,16 +90,22 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-              pariatur!</p>
+              pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam in id ratione veritatis
+              nesciunt officiis? Laboriosam, consequatur tenetur nulla eum animi quisquam. Vitae corporis nemo culpa
+              obcaecati doloribus, qui nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur minima
+              nihil ut numquam, assumenda id, autem totam perferendis saepe corrupti cupiditate eligendi ex eveniet eum
+              vero fugiat officia atque sit.</p>
           </div>
           <div class="grid-wrapper">
             <div class="box">
               <h3>Project Heading</h2>
-                <p>Project description goes here...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsum atque dolore rerum,
+                  praesentium</p>
             </div>
             <div class="box">
               <h3>Project Heading</h2>
-                <p>Project description goes here...</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ducimus error ullam quidem reiciendis
+                  aliquam</p>
             </div>
           </div>
         </div>
@@ -106,16 +120,22 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-              pariatur!</p>
+              pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam in id ratione veritatis
+              nesciunt officiis? Laboriosam, consequatur tenetur nulla eum animi quisquam. Vitae corporis nemo culpa
+              obcaecati doloribus, qui nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur minima
+              nihil ut numquam, assumenda id, autem totam perferendis saepe corrupti cupiditate eligendi ex eveniet eum
+              vero fugiat officia atque sit.</p>
           </div>
           <div class="grid-wrapper">
             <div class="box">
               <h3>Project Heading</h2>
-                <p>Project description goes here...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, delectus. Nesciunt perferendis enim
+                  doloribus</p>
             </div>
             <div class="box">
               <h3>Project Heading</h2>
-                <p>Project description goes here...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, quisquam. Sapiente sequi odit
+                  deserunt facere?</p>
             </div>
           </div>
         </div>
@@ -130,7 +150,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
-              pariatur!</p>
+              pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam in id ratione veritatis
+              nesciunt officiis? Laboriosam, consequatur tenetur nulla eum animi quisquam. Vitae corporis nemo culpa
+              obcaecati doloribus, qui nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur minima
+              nihil ut numquam, assumenda id, autem totam perferendis saepe corrupti cupiditate eligendi ex eveniet eum
+              vero fugiat officia atque sit.</p>
           </div>
         </div>
       </div>
