--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </header>
   <div class="content-wrapper">
     <section class="white-background">
-      <div class="section-wrapper">
+      <div class="section-wrapper fade-element fade-out">
         <h2 id="about">About Me</h2>
         <hr>
         <div class="section-content">
@@ -66,7 +66,7 @@
       </div>
     </section>
     <section class="blue-background">
-      <div class="section-wrapper">
+      <div class="section-wrapper fade-element fade-out">
         <h2 id="about">Work History</h2>
         <hr>
         <div>
@@ -82,7 +82,7 @@
       </div>
     </section>
     <section class="white-background">
-      <div class="section-wrapper">
+      <div class="section-wrapper fade-element fade-out">
         <h2 id="projects">Previous Projects</h2>
         <hr>
         <div class="section-content projects">
@@ -97,12 +97,12 @@
               vero fugiat officia atque sit.</p>
           </div>
           <div class="grid-wrapper">
-            <div class="box">
+            <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsum atque dolore rerum,
                   praesentium</p>
             </div>
-            <div class="box">
+            <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ducimus error ullam quidem reiciendis
                   aliquam</p>
@@ -112,7 +112,7 @@
       </div>
     </section>
     <section class="blue-background">
-      <div class="section-wrapper">
+      <div class="section-wrapper fade-element fade-out">
         <h2 id="projects">Active Projects</h2>
         <hr>
         <div class="section-content projects">
@@ -127,12 +127,12 @@
               vero fugiat officia atque sit.</p>
           </div>
           <div class="grid-wrapper">
-            <div class="box">
+            <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, delectus. Nesciunt perferendis enim
                   doloribus</p>
             </div>
-            <div class="box">
+            <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, quisquam. Sapiente sequi odit
                   deserunt facere?</p>
@@ -142,7 +142,7 @@
       </div>
     </section>
     <section class="white-background">
-      <div class="section-wrapper">
+      <div class="section-wrapper fade-element fade-out">
         <h2 id="projects">Contact Me</h2>
         <hr>
         <div class="section-content projects">
@@ -184,6 +184,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
     crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
