Change fade elements

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   </header>
   <div class="content-wrapper">
     <section class="white-background">
-      <div class="section-wrapper fade-element fade-out">
-        <h2 id="about">About Me</h2>
+      <div class="section-wrapper">
+        <h2 id="about" class="fade-element fade-out">About Me</h2>
         <hr>
-        <div class="section-content">
+        <div class="section-content fade-element fade-out">
           <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
@@ -66,10 +66,10 @@
       </div>
     </section>
     <section class="blue-background">
-      <div class="section-wrapper fade-element fade-out">
-        <h2 id="about">Work History</h2>
+      <div class="section-wrapper">
+        <h2 id="about" class="fade-element fade-out">Work History</h2>
         <hr>
-        <div>
+        <div class="fade-element fade-out">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
             saepe,
             ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
@@ -82,11 +82,11 @@
       </div>
     </section>
     <section class="white-background">
-      <div class="section-wrapper fade-element fade-out">
-        <h2 id="projects">Previous Projects</h2>
+      <div class="section-wrapper">
+        <h2 id="projects" class="fade-element fade-out">Previous Projects</h2>
         <hr>
         <div class="section-content projects">
-          <div>
+          <div class="fade-element fade-out">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
@@ -112,11 +112,11 @@
       </div>
     </section>
     <section class="blue-background">
-      <div class="section-wrapper fade-element fade-out">
-        <h2 id="projects">Active Projects</h2>
+      <div class="section-wrapper">
+        <h2 id="projects" class="fade-element fade-out">Active Projects</h2>
         <hr>
         <div class="section-content projects">
-          <div>
+          <div class="fade-element fade-out">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
@@ -142,11 +142,11 @@
       </div>
     </section>
     <section class="white-background">
-      <div class="section-wrapper fade-element fade-out">
-        <h2 id="projects">Contact Me</h2>
+      <div class="section-wrapper">
+        <h2 id="projects" class="fade-element fade-out">Contact Me</h2>
         <hr>
         <div class="section-content projects">
-          <div>
+          <div class="fade-element fade-out">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda porro illo laudantium! Sed ducimus
               saepe,
               ipsum ratione nulla voluptatum laudantium animi quas necessitatibus, quasi officia, nihil porro ea itaque
