Update colour scheme

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
   </header>
   <div class="content-wrapper">
-    <section class="white-background">
+    <section class="main-background">
       <div class="section-wrapper">
         <h2 id="about" class="fade-element fade-out">About Me</h2>
         <hr>
@@ -65,7 +65,7 @@
         </div>
       </div>
     </section>
-    <section class="blue-background">
+    <section class="alternative-background">
       <div class="section-wrapper">
         <h2 id="about" class="fade-element fade-out">Work History</h2>
         <hr>
@@ -81,7 +81,7 @@
         </div>
       </div>
     </section>
-    <section class="white-background">
+    <section class="main-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Previous Projects</h2>
         <hr>
@@ -101,17 +101,20 @@
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsum atque dolore rerum,
                   praesentium</p>
+                  <div class="tag">C#</div>
+                  <div class="tag">API</div>
             </div>
             <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ducimus error ullam quidem reiciendis
                   aliquam</p>
+                  <div class="tag">Payment Gateway</div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="blue-background">
+    <section class="alternative-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Active Projects</h2>
         <hr>
@@ -131,17 +134,19 @@
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, delectus. Nesciunt perferendis enim
                   doloribus</p>
+                  <div class="tag">SwiftUI</div>
             </div>
             <div class="box fade-element fade-out">
               <h3>Project Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, quisquam. Sapiente sequi odit
                   deserunt facere?</p>
+                  <div class="tag">React</div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="white-background">
+    <section class="main-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Contact Me</h2>
         <hr>
