--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               vero fugiat officia atque sit.</p>
           </div>
           <div>
-            <img class="content-image" src="./img/temp-profile-pic.jpg" alt="profile-picture">
+            <img class="content-image" src="./img/profile-pic.jpg" alt="profile-picture">
           </div>
         </div>
       </div>
@@ -109,6 +109,13 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ducimus error ullam quidem reiciendis
                   aliquam</p>
                   <div class="tag">Payment Gateway</div>
+            </div>
+            <div class="box fade-element fade-out">
+              <h3>Project Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsum atque dolore rerum,
+                  praesentium</p>
+                  <div class="tag">C#</div>
+                  <div class="tag">API</div>
             </div>
           </div>
         </div>
