--- a/index.html
+++ b/index.html
@@ -177,18 +177,23 @@
     <div id="contact" class="social-links">
       <ul>
         <li>
+          <a href="mailto:tonysharples22@me.com" aria-label="Email" target="_blank">
+            <img src="./img/email_icon.svg" alt="" class="social-icon">
+          </a>
+        </li>
+        <li>
           <a href="https://github.com/Barenbik" aria-label="GitHub" target="_blank">
             <img src="./img/github_icon.svg" alt="" class="social-icon">
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/Barenbik" aria-label="Twitter" target="_blank">
-            <img src="./img/twitter_icon.svg" alt="" class="social-icon">
+          <a href="https://www.linkedin.com/in/tony-sharples-b451a633/" aria-label="LinkedIn" target="_blank">
+            <img src="./img/linkedin_icon.svg" alt="" class="social-icon">
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/tony-sharples-b451a633/" aria-label="LinkedIn" target="_blank">
-            <img src="./img/linkedin_icon.svg" alt="" class="social-icon">
+          <a href="https://twitter.com/Barenbik" aria-label="Twitter" target="_blank">
+            <img src="./img/twitter_icon.svg" alt="" class="social-icon">
           </a>
         </li>
       </ul>
