Make navbar sticky

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about-section">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#previous-projects-section">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact-section">Contact</a>
             </li>
           </ul>
         </div>
@@ -45,8 +45,8 @@
     </nav>
   </header>
   <div class="content-wrapper">
-    <section class="main-background">
-      <div class="section-wrapper">
+    <section id="about-section" class="main-background">
+      <div class="section-wrapper about-section">
         <h2 id="about" class="fade-element fade-out">About Me</h2>
         <hr>
         <div class="section-content fade-element fade-out">
@@ -66,7 +66,7 @@
         </div>
       </div>
     </section>
-    <section class="alternative-background">
+    <section id="about-section" class="alternative-background">
       <div class="section-wrapper">
         <h2 id="about" class="fade-element fade-out">Work History</h2>
         <hr>
@@ -82,7 +82,7 @@
         </div>
       </div>
     </section>
-    <section class="main-background">
+    <section id="previous-projects-section" class="main-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Previous Projects</h2>
         <hr>
@@ -122,7 +122,7 @@
         </div>
       </div>
     </section>
-    <section class="alternative-background">
+    <section id="active-projects-section" class="alternative-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Active Projects</h2>
         <hr>
@@ -154,7 +154,7 @@
         </div>
       </div>
     </section>
-    <section class="main-background">
+    <section id="contact-section" class="main-background">
       <div class="section-wrapper">
         <h2 id="projects" class="fade-element fade-out">Contact Me</h2>
         <hr>
